# audiopus_sys

./: .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  azure-pipelines.yml  azure-template-unix.yml  build.rs
.github/workflows/: ci.yml  docs.yml
msvc/x64/: opus.lib
msvc/x64/dy/: opus.exp  opus.lib
msvc/x86/: opus.lib
msvc/x86/dy/: opus.exp  opus.lib
src/: lib.rs  wrapper.h
